补充了hello的文档

--- a/example-hello/Makefile
+++ b/example-hello/Makefile
@@ -1,10 +1,11 @@
 
 CC		:= gcc
+# 指定了提示错误的级别，-g表示要进行debug，在发布的时候，可以将-g给去掉．
 CFLAGS  := -Wall -Wextra -g
 BIN		:= bin
 SRC		:= src
 
-# 下面三个没有用
+# 下面三个现在还没有用
 INCLUDE	:= include
 LIB		:= lib
 LIBRARIES	:=
@@ -17,8 +18,6 @@ EXEC	:= main
 endif
 
 
-
-
 all:$(BIN)/$(EXEC)
 
 run:all
@@ -27,6 +26,7 @@ run:all
 clean:
 	rm -rf $(BIN)/$(EXEC)
 
+# 将src下的文件都编译了
 $(BIN)/$(EXEC):$(SRC)/*
 	gcc $^ -o $@  $(CFLAGS)
 	
