commit the study code

--- a/example-study/.vscode/tasks.json
+++ b/example-study/.vscode/tasks.json
@@ -11,7 +11,7 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}.o"
+                "${fileDirname}/${fileBasenameNoExtension}.out"
             ],
             "options": {
                 "cwd": "/usr/bin"
@@ -20,5 +20,6 @@
                 "$gcc"
             ]
         }
+
     ]
 }
