--- a/example-study/.vscode/launch.json
+++ b/example-study/.vscode/launch.json
@@ -9,7 +9,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}.out",
-            "args": [],
+            "args": [
+                
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
