--- a/example-study/.vscode/settings.json
+++ b/example-study/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "limits.h": "c"
+        "limits.h": "c",
+        "string.h": "c",
+        "errno.h": "c"
     }
 }
