--- a/example-study/.vscode/settings.json
+++ b/example-study/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "limits.h": "c",
         "string.h": "c",
-        "errno.h": "c"
+        "errno.h": "c",
+        "ctype.h": "c"
     }
 }
