add new lib code

--- a/example-study/.vscode/settings.json
+++ b/example-study/.vscode/settings.json
@@ -3,6 +3,8 @@
         "limits.h": "c",
         "string.h": "c",
         "errno.h": "c",
-        "ctype.h": "c"
+        "ctype.h": "c",
+        "unistd.h": "c",
+        "stdio.h": "c"
     }
 }
