add ffmpeg code

--- a/example-ffmpeg/.vscode/launch.json
+++ b/example-ffmpeg/.vscode/launch.json
@@ -9,7 +9,7 @@
                 "type": "cppdbg",
                 "request": "launch",
                 "program": "${workspaceFolder}/bin/${fileBasenameNoExtension}",
-                "args": [],
+                "args": ["list","resources"],
                 "stopAtEntry": false,
                 "cwd": "${workspaceFolder}",
                 "environment": [],
