--- a/example-cpp/.vscode/tasks.json
+++ b/example-cpp/.vscode/tasks.json
@@ -8,6 +8,7 @@
                 "-g",
                 "-Wall",
                 "${file}",
+                "-lpthread"
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}.out"
             ],
